--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
           echo test, and deploy your project.
       
       - name: Setup GraalVM Comunity Edition
-        uses: rinx/setup-graalvm-cd@v0.0.5
+        uses: rinx/setup-graalvm-ce@v0.0.5
         with:
           graalvm-version: "20.2.0"
           java-version: "java11"
