--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,3 +38,8 @@ jobs:
 
       - name: mvn package
         run: mvn package
+
+      - uses: actions/upload-artifact@v2
+        with:
+          name: jar
+          path: target/*runner*.jar
